--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 aiogram = "^3.0.0"
 python-dotenv = "^1.0.0"
 dp = "^1.0"
+matplotlib = "^3.10.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "7.4.4"  # Фиксированная версия
